swagger API documentation - CRUD Tanaman
